--- a/css/custom.css
+++ b/css/custom.css
@@ -792,7 +792,8 @@ section#clients p{
 
     cursor: pointer;
 
-    color:#CCCCCC;
+    /*color:#CCCCCC;*/
+    color:black;
 
     text-decoration: none;
 
@@ -800,7 +801,8 @@ section#clients p{
 
 .custom_switcher .vertical_line{
 
-    color:#CCCCCC;
+    /*color:#CCCCCC;*/
+    color:black;
 
 }
 
@@ -890,7 +892,8 @@ section#clients p{
 
     z-index: 100;
 
-    background:rgba(23, 23, 23, 0.4);
+    /*background:rgba(23, 23, 23, 0.4);*/
+    background:#f3f3f3;
 
 }
 
@@ -904,7 +907,8 @@ section#clients p{
 
 .header_ul li span i{
 
-    color: #cccccc; 
+    /*color: #cccccc;*/
+    color:black; 
 
 }
 
@@ -920,7 +924,7 @@ section#clients p{
 
 {
 
-    background: rgba(23, 23, 23, 0.8) !important;
+    background: #f3f3f3;
 
 }
 
@@ -1010,7 +1014,8 @@ section#clients p{
 
 .custom_header .header_ul li span{
 
-    color: #ccc;
+    /*color: #ccc;*/
+    color:black;
 
 }
 
